@@ -260,7 +260,7 @@ class CeiloChunk(AbstractChunk):
     @log_func_call(logger)
     def metarize(self, which: int = 'slices', base_lvl_alt_perc: float = 5.,
                  base_lvl_lookback_perc: float = 100.,
-                 lim0: Union[int, float] = 0, lim8: Union[int, float] = 100) -> None:
+                 lim0: int = 0, lim8: int = 0) -> None:
         """ Assembles a :py:class:`pandas.DataFrame` of slice/group/layer METAR properties of
         interest.
 
@@ -276,10 +276,11 @@ class CeiloChunk(AbstractChunk):
                 include in the calculation of the base altitude, expressed in percent of the total
                 number of points, and starting from the most recent ones. Defaults to 100, i.e.
                 use all the available points to derive the cloud base altitude.
-            lim0 (int|float, optional): upper limit of the sky coverage percentage for the 0 okta
-                bin, in %. Defaults to 0.
-            lim8 (int|float, optional): lower limit of the sky coverage percentage for the 8 okta
-                bin, in %. Defaults to 100.
+            lim0 (int, optional): maximum (absolute) number of hits allowed in a slice/group/layer
+                for it to be considered to be 0 oktas. Defaults to 0.
+            lim8 (int, optional): maximum (absolute) number of holes (=non-detection of a cloud
+                base) allowed in a slice/group/layer for it to be considered to be 8 oktas.
+                Defaults to 0.
 
         The :py:class:`pandas.DataFrame` generated by this method is subsequently available via the
         the appropriate class property :py:attr:`.CeiloChunk.slices`, :py:attr:`.CeiloChunk.groups`,
@@ -398,8 +399,14 @@ class CeiloChunk(AbstractChunk):
             # Transform this into a percentage
             pdf.iloc[ind]['perc'] = pdf.iloc[ind]['n_hits']/self.max_hits_per_layer * 100
 
-            # Compute the corresponding okta level
-            pdf.iloc[ind]['okta'] = int(wmo.perc2okta(pdf.iloc[ind]['perc'], lim0=lim0, lim8=lim8))
+            # Compute the corresponding okta level, not fogetting to account for possible buffers
+            # for the 0 and 8 okta bins.
+            if pdf.iloc[ind]['n_hits'] <= lim0:
+                pdf.iloc[ind]['okta'] = 0
+            elif (self.max_hits_per_layer - pdf.iloc[ind]['n_hits']) <= lim8:
+                pdf.iloc[ind]['okta'] = 8
+            else:
+                pdf.iloc[ind]['okta'] = int(wmo.perc2okta(pdf.iloc[ind]['perc']))
 
             # Start computing the base altitude
             # First, compute which points should be considered in terms of lookback time
@@ -499,7 +506,7 @@ class CeiloChunk(AbstractChunk):
         # Finally, let's metarize these slices !
         self.metarize(which='slices', base_lvl_alt_perc=self.prms['BASE_LVL_ALT_PERC'],
                       base_lvl_lookback_perc=self.prms['BASE_LVL_LOOKBACK_PERC'],
-                      lim0=self.prms['OKTA_LIM0'], lim8=self.prms['OKTA_LIM8'])
+                      lim0=self.prms['MAX_HITS_OKTA0'], lim8=self.prms['MAX_HOLES_OKTA8'])
 
     @log_func_call(logger)
     def find_groups(self) -> None:
@@ -618,7 +625,7 @@ class CeiloChunk(AbstractChunk):
         # Finally, let's metarize these !
         self.metarize(which='groups', base_lvl_alt_perc=self.prms['BASE_LVL_ALT_PERC'],
                       base_lvl_lookback_perc=self.prms['BASE_LVL_LOOKBACK_PERC'],
-                      lim0=self.prms['OKTA_LIM0'], lim8=self.prms['OKTA_LIM8'])
+                      lim0=self.prms['MAX_HITS_OKTA0'], lim8=self.prms['MAX_HOLES_OKTA8'])
 
     @log_func_call(logger)
     def find_layers(self) -> None:
@@ -709,7 +716,7 @@ class CeiloChunk(AbstractChunk):
         # Finally, let's metarize these !
         self.metarize(which='layers', base_lvl_alt_perc=self.prms['BASE_LVL_ALT_PERC'],
                       base_lvl_lookback_perc=self.prms['BASE_LVL_LOOKBACK_PERC'],
-                      lim0=self.prms['OKTA_LIM0'], lim8=self.prms['OKTA_LIM8'])
+                      lim0=self.prms['MAX_HITS_OKTA0'], lim8=self.prms['MAX_HOLES_OKTA8'])
 
     @property
     def n_slices(self) -> Union[None, int]:
