@@ -22,17 +22,11 @@ logger = logging.getLogger(__name__)
 
 
 @log_func_call(logger)
-def perc2okta(val: Union[int, float, np.ndarray],
-              lim0: Union[int, float] = 0,
-              lim8: Union[int, float] = 100) -> np.ndarray:
+def perc2okta(val: Union[int, float, np.ndarray]) -> np.ndarray:
     """ Converts a sky coverage percentage into oktas.
 
     Args:
         val (int|float|ndarray): the sky coverage percentage to convert, in percent.
-        lim0 (int|float, optional): the upper limit for the 0 okta bin, in percent.
-            Defaults to 0.
-        lim8 (int|float, optional): the lower limit for the 8 oktas bin, in percent.
-            Defaults to 100.
 
     Returns:
         ndarray of int: the okta value(s).
@@ -41,15 +35,14 @@ def perc2okta(val: Union[int, float, np.ndarray],
     special, in that these indicate that the sky is covered at *exactly* 0%, respectively 100%.
     This implies that the 1 okta and 7 okta bins are larger than others.
 
-    This function allows to tweak the 0 and 8 oktas limits via the `lim0` and `lim8` keyword
-    arguments, such that:
+    Specifically:
 
-        - 0 okta  == 0 <= val <= lim0
-        - 1 okta  == lim0 < val <= 1.5*100/8
+        - 0 okta  == val=0
+        - 1 okta  == 0 < val <= 1.5*100/8
         - 2 oktas == 1.5*100/8 < val <= 2.5*100/8
         - ...
-        - 7 oktas == 6.5*100/8 < val < lim8
-        - 8 oktas == lim8 <= val <= 100
+        - 7 oktas == 6.5*100/8 < val < 100
+        - 8 oktas == val=100
 
     Reference:
         Boers, R., de Haij, M. J., Wauben, W. M. F., Baltink, H. K., van Ulft, L. H.,
@@ -70,8 +63,8 @@ def perc2okta(val: Union[int, float, np.ndarray],
     out = np.full_like(val, -1., dtype=float)
 
     # Deal with the edge cases first
-    out[(val >= 0) * (val <= lim0)] = 0
-    out[(lim8 <= val) * (val <= 100)] = 8
+    out[(val == 0)] = 0
+    out[(val == 100)] = 8
 
     # Now deal with the other cases
     out[out == -1] = val[out == -1]/(100/8)
