@@ -13,6 +13,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ### Fixed:
  - [fpavogt, 2022-10-18] Fix #84 and #85.
 ### Changed:
+ - [fpavogt, 2022-12-16] Replace OKTA_LIM0 (OKTA_LIM8) with MIN_HITS_OKTA0 (MAX_HOLES_OKTA8) - fixes #92.
  - [fpavogt, 2022-10-20] Remove superfluous parameters from the default set.
  - [fpavogt, 2022-10-18] Fluffiness is now computed via LOWESS instead of a Convex Hull.
  - [fpavogt, 2022-10-18] Base level is now defined as a percentile of the total number of points.
